--- a/python/project/flask_app/templates/play_setup.html
+++ b/python/project/flask_app/templates/play_setup.html
@@ -22,9 +22,9 @@
         <form action="/attempt_info" method="POST">
             <h2 class="choose_board">Choose a Board:</h2>
             <div class="space-around">
+                <input type="hidden" name="board_color" id="board_color" value="">
                 {% for color in colors %}
-                    <div id="{{color}}">
-                        <table>
+                        <table id="{{color}}" onclick="assignBoardColor(this)">
                             {% for i in range(board) %}
                                 {% if i % 2 == 0 %}
                                     <tr>
@@ -37,7 +37,6 @@
                                 {% endif %}
                             {% endfor %}
                         </table>
-                    </div>
                 {% endfor %}
             </div>
             <h2>Choose Your Settings:</h2>
@@ -60,4 +59,5 @@
         </form>
     </div>
 </body>
+<script src="{{ url_for('static', filename='/js/play_setup.js') }}"></script>
 </html>
