--- a/python/django/dojo-survey/form/templates/index.html
+++ b/python/django/dojo-survey/form/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <form action="result/" method="post">
+    <form class="box" action="result/" method="post">
         {% csrf_token %}
         <div class="duo">
             <label for="name">Your Name:</label>
