--- a/python/django/dojo-survey/form/templates/show.html
+++ b/python/django/dojo-survey/form/templates/show.html
@@ -8,9 +8,26 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <p>{{request.session.name}}</p>
-    <p>{{request.session.location}}</p>
-    <p>{{request.session.language}}</p>
-    <p>{{request.session.comments}}</p>
+    <div class="box">
+        <div class="duo">
+            <h3>Name:</h3>
+            <p>{{request.session.name}}</p>
+        </div>
+        <div class="duo">
+            <h3>Dojo Location:</h3>
+            <p>{{request.session.location}}</p>
+        </div>
+        <div class="duo">
+            <h3>Favorite Language:</h3>
+            <p>{{request.session.language}}</p>
+        </div>
+        <div class="duo">
+            <h3>Comments:</h3>
+            <p>{{request.session.comments}}</p>
+        </div>
+        <form class="center" action="/">
+            <button>Go Back</button>
+        </form>
+    </div>
 </body>
 </html>
