--- a/python/django/TV-shows/app/templates/edit_show.html
+++ b/python/django/TV-shows/app/templates/edit_show.html
@@ -13,6 +13,13 @@
     <a href="/shows/all/">View All Shows</a>
     <form action="/shows/update/{{show.id}}/" method="post">
         {% csrf_token %}
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li> 
+                {% endfor %}
+            </ul>
+        {% endif %}
         <div class="duo">
             <label for="title">Title</label>
             <input value="{{show.title}}" name="title" type="text">
@@ -27,7 +34,7 @@
         </div>
         <label for="desc">Description</label>
         <textarea value="{{show.desc}}" name="desc" id="" cols="30" rows="10">{{show.desc}}</textarea>
-        <button type="submit">Create</button>
+        <button type="submit">Update</button>
     </form>
 </body>
 </html>
